# netflix-genre-prediction

./: .gitignore  CLAUDE.md  EXPERIMENTS.md  LICENSE  Makefile  README.md  main.py  netflix_preprocessing.py  netflix_training.py  pyproject.toml
