[project]
name = "netflix-genre-prediction"
version = "0.1.0"
description = "Multi-label text classification project that predicts Netflix content genres"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.4",
    "ollama>=0.6.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
]
